--- a/src/pages/TelaLogin/TelaLogin.css
+++ b/src/pages/TelaLogin/TelaLogin.css
@@ -1,5 +1,7 @@
-/* cores do projeto*/
-
+html {
+  /* a cada 1rem sera considerado 10px*/
+  font-size: 62.5%;
+}
 * {
   margin: 0;
   padding: 0;
@@ -9,46 +11,55 @@
 }
 body {
   display: flex;
-  width: 1280px;
-  height: 832px;
+  height: 100%;
   border-radius: var(--none, 0px);
   background: #fff;
 }
 main {
   display: flex;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
 }
-.img-login {
+/*Container imagem*/
+.container-img {
   display: flex;
-  width: 525px;
-  height: 832px;
+  width: 41.02%;
+  max-width: 525px;
+  height: 100vh;
   border-radius: var(--none, 0px);
   background:
-    url(orange-juice-front-end\src\pages\TelaLogin\assets\img_login.png),
+    url("\orange-juice-front-end\src\pages\TelaLogin\assets\img_login.png"),
     lightgray 50% / cover no-repeat;
   flex-shrink: 0;
 }
-
-.btn-entrar-login {
+.btn-submit {
   display: flex;
-  width: 517px;
-  height: 42px;
+  width: 100%;
+  height: 4.2rem;
+  overflow: hidden;
   padding: 8px 22px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
   border-radius: var(--borderRadius, 4px);
-  background: var(--Color-Brand-Secundria-Secondary-100, #f52);
-
-  /* elevation/2 */
   box-shadow:
     0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14),
     0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  background: var(--Color-Brand-Secundria-Secondary-100, #f52);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
 }
-.btn-google {
+.btn-submit:hover {
+  border-radius: var(--borderRadius, 4px);
+  background: var(--Color-Brand-Secundria-Secondary-110, #c40);
+  /* elevation/4 */
+  box-shadow:
+    0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+.button-google-sign-in {
   display: flex;
   padding: 11px var(--1, 8px);
   border-radius: 2px;
@@ -56,69 +67,30 @@ main {
     0px 1px 1px 0px rgba(0, 0, 0, 0.17),
     0px 0px 1px 0px rgba(0, 0, 0, 0.08);
   background: #fff;
-  align-items: flex-start;
+  align-items: center;
   gap: var(--3, 24px);
 }
-
-.btn-google h4 {
-  color: rgba(0, 0, 0, 0.54);
-  font-family: Roboto;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+.button-google-sign-in:hover {
+  border-radius: 2px;
+  background: rgba(66, 133, 244, 0.1);
 }
-
-#email {
-  border-radius: var(--borderRadius, 4px);
-border: var(--none, 1px) solid var(--components-input-outlined-enabledBorder, rgba(0, 0, 0, 0.23));
-  width: 100%;
-  display: flex;
-  height: 56px;
-  flex-direction: column;
-  align-items: flex-start;
-  flex-shrink: 0;
-  align-self: stretch;
-}
-#senha {
-  height: 56px;
-  width: 100%;
-  display: flex;
-  padding: var(--none, 0px) 12px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: var(--none, 0px);
-  align-self: stretch;
-  border-radius: var(--borderRadius, 4px);
-border: var(--none, 1px) solid var(--components-input-outlined-enabledBorder, rgba(0, 0, 0, 0.23));
-}
+/*Container login*/
 .container-login {
   display: flex;
-  width: 755px;
-  height: 832px;
+  max-width: 755px;
+  width: 60%;
+  height: 100%;
   flex-shrink: 0;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.container-login h3 {
-  color: var(
-    --Color-Brand-Primria-Primary-90,
-    var(--Color-Brand-Primria-Primary-90, #224)
-  );
-  font-family: Roboto;
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 40px;
-  text-align: center;
-  padding: 13px;
-}
-
-.forms-login {
+.form-login {
   display: flex;
-  width: 517px;
-  height: 271px;
+  /*width: 517px;
+  height: 271px; */
+  width: 80%;
+  max-width: 517px;
   padding-bottom: 3px;
   flex-direction: column;
   justify-content: center;
@@ -126,24 +98,110 @@ border: var(--none, 1px) solid var(--components-input-outlined-enabledBorder, rg
   gap: 18px;
   flex-shrink: 0;
 }
-
-.forms-login h5 {
+.text-begin {
+  color: var(
+    --Color-Brand-Primria-Primary-90,
+    var(--Color-Brand-Primria-Primary-90, #224)
+  );
+  font-family: Roboto;
+  font-size: 4.8rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 4rem;
+  text-align: center;
+}
+.text-login {
   align-self: stretch;
   color: var(--Neutral-Colors-Neutral-110, #515255);
   font-family: Roboto;
-  font-size: 24px;
+  font-size: 2.4rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 2.4rem;
 }
-.btn-entrar-login .text-enviar-btn{
-  color: var(--Neutral-Colors-Neutral-60, #FCFDFF);
+.link-cadastro {
+  color: var(--Neutral-Colors-Neutral-100, #818388);
   font-family: Roboto;
-  font-size: 15px;
+  font-size: 1.6rem;
   font-style: normal;
-  font-weight: 500;
-  line-height: 26px;
-  letter-spacing: 0.46px;
-  text-transform: uppercase;
-  font-feature-settings: 'clig' off, 'liga' off;
+  font-weight: 400;
+  line-height: 1.6rem;
+  letter-spacing: 0.15px;
+}
+.btn-visibility {
+  border-left: none;
+  border-radius: var(--borderRadius, 4px);
+  border: var(--none, 1px) solid
+    var(--components-input-outlined-enabledBorder, rgba(0, 0, 0, 0.23));
+}
+
+.legend-border {
+  text-align: left !important;
+  width: auto;
+  padding: 0 10px;
+}
+/*Parte da responsividade*/
+@media (max-width: 640px) {
+  body {
+    height: 100vh;
+  }
+  html {
+    border-radius: var(--none, 0px);
+    background: #fff;
+    font-size: 50%;
+  }
+  main {
+    order: -1;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+  }
+  .container-img {
+    display: none;
+  }
+  .text-begin {
+    color: var(
+      --Color-Brand-Primria-Primary-90,
+      var(--Color-Brand-Primria-Primary-90, #224)
+    );
+    text-align: center;
+
+    /* [Orange P] Style Guide/H5 */
+    font-family: Roboto;
+    font-size: 2.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2.4rem; /* 100% */
+  }
+  .form-login {
+    width: 80%;
+    height: 50%;
+    display: flex;
+    padding-bottom: 3px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 16px;
+    flex-shrink: 0;
+  }
+  .container-login {
+    margin-top: 0;
+  }
+  .text-login {
+    align-self: stretch;
+    color: var(--Neutral-Colors-Neutral-110, #515255);
+    font-family: Roboto;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.6rem;
+    letter-spacing: 0.015rem;
+  }
+  .button-google-sign-in {
+    display: inline-flex;
+    padding: 3px;
+    flex-direction: row;
+    gap: 8px;
+  }
 }
