--- a/src/pages/TelaLogin/TelaLogin.css
+++ b/src/pages/TelaLogin/TelaLogin.css
@@ -40,6 +40,7 @@ main {
   height: 4.2rem;
   overflow: hidden;
   padding: 8px 22px;
+  border: none;
   border-radius: var(--borderRadius, 4px);
   box-shadow:
     0px 3px 1px -2px rgba(0, 0, 0, 0.2),
@@ -113,8 +114,7 @@ main {
   line-height: 4rem;
   text-align: center;
 }
-.form-label:focus + .form-group,
-.filled {
+.form-label:focus + .form-group {
   position: relative;
   top: -10px;
 }
@@ -137,6 +137,13 @@ main {
   line-height: 1.6rem;
   letter-spacing: 0.15px;
 }
+#input-password {
+  justify-self: flex-end;
+  display: flex;
+  background-position: 95% center;
+  background-image: url(/public/images/visibility.svg);
+  background-repeat: no-repeat;
+}
 .btn-visibility {
   border-left: none;
   border-radius: var(--borderRadius, 4px);
@@ -144,13 +151,13 @@ main {
     var(--components-input-outlined-enabledBorder, rgba(0, 0, 0, 0.23));
 }
 /* Import Google font - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -171,12 +178,13 @@ body {
   font-size: 18px;
   padding: 0 15px;
   border-radius: var(--borderRadius, 4px);
-  border: var(--none, 1px) solid var(--components-input-outlined-enabledBorder, rgba(0, 0, 0, 0.23));
+  border: var(--none, 1px) solid
+    var(--components-input-outlined-enabledBorder, rgba(0, 0, 0, 0.23));
   color: #fff;
   outline: none;
 }
 
-.input-field label {
+.input-field .form-label {
   position: absolute;
   top: -10px; /* Ajuste o valor conforme necessário para posicionar acima da borda */
   left: 15px;
@@ -187,10 +195,6 @@ body {
   transition: 0.3s;
 }
 
-input:focus {
-  border: 2px solid #18ffff;
-}
-
 input:focus ~ label,
 input:valid ~ label {
   top: -10px; /* Mantenha o mesmo valor ajustado para o foco ou input válido */
@@ -198,7 +202,16 @@ input:valid ~ label {
   font-size: 16px;
   padding: 0 2px;
   background: #060b23;
+ 
 }
+
+a {
+  text-decoration: none;
+}
+input:hover {
+  border-color: var(--components-input-standard-hoverBorder, #000);
+}
+
 
 
 /*Parte da responsividade*/
