--- a/src/pages/TelaCadastro/responsive.css
+++ b/src/pages/TelaCadastro/responsive.css
@@ -1,97 +1,61 @@
-/* Import Google font - Poppins */
-html {
-  /* a cada 1rem sera considerado 10px*/
-  font-size: 62.5%;
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-  align-items: center;
-}
-
 body {
   display: flex;
-  height: 100%;
+  height: 100vh;
+  align-items: center;
+}
+html {
   border-radius: var(--none, 0px);
   background: #fff;
+  font-size: 50%;
 }
 main {
+  order: -1;
   display: flex;
+  justify-content: center;
   width: 100%;
   height: 100%;
-}
-/*Container imagem*/
-.container-img {
-  display: flex;
-  width: 41.02%;
-  max-width: 525px;
-  height: 100vh;
-  border-radius: var(--none, 0px);
-  background:
-    url("\orange-juice-front-end\src\pages\TelaLogin\assets\img_login.png"),
-    lightgray 50% / cover no-repeat;
-  flex-shrink: 0;
-}
-.btn-submit {
-  display: flex;
-  width: 100%;
-  height: 4.2rem;
-  overflow: hidden;
-  padding: 8px 22px;
-  border: none;
-  border-radius: var(--borderRadius, 4px);
-  box-shadow:
-    0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-  background: var(--Color-Brand-Secundria-Secondary-100, #f52);
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
 }
-.btn-submit:hover {
-  border-radius: var(--borderRadius, 4px);
-  background: var(--Color-Brand-Secundria-Secondary-110, #c40);
-  /* elevation/4 */
-  box-shadow:
-    0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-    0px 4px 5px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-}
-
-.button-google-sign-in {
-  display: flex;
-  padding: 11px var(--1, 8px);
-  border-radius: 2px;
-  box-shadow:
-    0px 1px 1px 0px rgba(0, 0, 0, 0.17),
-    0px 0px 1px 0px rgba(0, 0, 0, 0.08);
-  background: #fff;
-  align-items: center;
-  gap: var(--3, 24px);
-}
-.button-google-sign-in:hover {
-  border-radius: 2px;
-  background: rgba(66, 133, 244, 0.1);
-}
-/*Container login*/
 .container-form {
   display: flex;
   max-width: 755px;
-  width: 60%;
-  height: 100%;
+  width: 80%;
+  height: auto;
   flex-shrink: 0;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.form-sign-in {
+.container-img {
+  width: 100%;
+  height: 100%;
+  max-width: 549px;
+  max-height: 832px;
+  flex-shrink: 0;
+  display: none;
+}
+
+.text-begin {
+  color: var(
+    --Color-Brand-Primria-Primary-90,
+    var(--Color-Brand-Primria-Primary-90, #224)
+  );
+  text-align: center;
+
+  /* [Orange P] Style Guide/H5 */
+  font-family: Roboto;
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.4rem; /* 100% */
+}
+
+
+
+.form-login {
   display: flex;
   /*width: 517px;
-  height: 271px; */
+      height: 271px; */
   width: 80%;
   max-width: 517px;
   padding-bottom: 3px;
@@ -137,6 +101,9 @@ main {
   line-height: 1.6rem;
   letter-spacing: 0.15px;
 }
+.form-control {
+  width: 100%;
+}
 #input-password {
   justify-self: flex-end;
   display: flex;
@@ -159,11 +126,58 @@ body {
   justify-content: center;
   background-color: #fff;
 }
-
+.title {
+  flex: 1 0 0;
+  color: var(
+    --Color-Brand-Primria-Primary-90,
+    var(--Color-Brand-Primria-Primary-90, #224)
+  );
+  font-family: Roboto;
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.4rem;
+  text-align: center;
+}
 .input-field {
   position: relative;
-  width: 100%;
-  
+}
+
+.input-field input {
+  display: flex;
+  width: 312px;
+  padding: var(--none, 0px) 12px;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.input-field .form-label {
+  position: absolute;
+  top: -10px; /* Ajuste o valor conforme necessário para posicionar acima da borda */
+  left: 15px;
+  font-size: 16px;
+  padding: 0 2px;
+  background: #fff;
+  color: var(--Neutral-Colors-Neutral-110, #515255);
+  transition: 0.3s;
+}
+
+input:focus ~ label,
+input:valid ~ label {
+  top: -10px; /* Mantenha o mesmo valor ajustado para o foco ou input válido */
+  left: 15px;
+  font-size: 16px;
+  padding: 0 2px;
+  background: #060b23;
+}
+a {
+  text-decoration: none;
+}
+input:hover {
+  border-color: var(--components-input-standard-hoverBorder, #000);
+}
+.input-field {
+  position: relative;
 }
 
 .input-field input {
