--- a/src/pages/TelaLogin/TelaLogin.css
+++ b/src/pages/TelaLogin/TelaLogin.css
@@ -1,4 +1,4 @@
-/* Import Google font - Poppins */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 html {
   /* a cada 1rem sera considerado 10px*/
   font-size: 62.5%;
@@ -76,6 +76,14 @@ main {
 .button-google-sign-in:hover {
   border-radius: 2px;
   background: rgba(66, 133, 244, 0.1);
+}
+.btn-google-title{
+    color: rgba(0, 0, 0, 0.54);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 /*Container login*/
 .container-login {
