--- a/src/pages/TelaMeusProjetos/css/reset.css
+++ b/src/pages/TelaMeusProjetos/css/reset.css
@@ -3,3 +3,19 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-size: 1.6rem;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
