--- a/src/pages/TelaMeusProjetos/css/style.css
+++ b/src/pages/TelaMeusProjetos/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 @import url(./reset.css);
 @import url(./header.css);
+@import url(./card-menu.css);
 
 :root {
     --color-principal-100: #111133;
