--- a/src/pages/TelaMeusProjetos/css/style.css
+++ b/src/pages/TelaMeusProjetos/css/style.css
@@ -2,11 +2,13 @@
 @import url(./reset.css);
 @import url(./header.css);
 @import url(./card-menu.css);
+@import url(./meus-projetos.css);
 
 :root {
+    --color-principal-130:#303133;
     --color-principal-100: #111133;
     --color-neutral-130:#0B0C0D;
-    --color-neutral-60:#FCFDFF;
-    --color-neutral-130:#303133;
+    --color-neutral-100:#818388;
     --color-neutral-70:#E6E9F2;
+    --color-neutral-60:#FCFDFF;
 }
