feat: aplicação da responsividade tela meus projetos

--- a/src/pages/TelaMeusProjetos/css/card-menu.css
+++ b/src/pages/TelaMeusProjetos/css/card-menu.css
@@ -53,3 +53,9 @@
     border: none;
     border: 2px;
 }
+
+@media (max-width: 450px) {
+    .card-menu__card {
+        flex-direction: column;
+    }
+}
