--- a/src/pages/TelaMeusProjetos/css/style.css
+++ b/src/pages/TelaMeusProjetos/css/style.css
@@ -3,6 +3,7 @@
 @import url(./header.css);
 @import url(./card-menu.css);
 @import url(./meus-projetos.css);
+@import url(./modal.css);
 
 :root {
     --color-principal-130:#303133;
