organização de diretorios e estilização de modais

--- a/src/pages/TelaMeusProjetos/css/style.css
+++ b/src/pages/TelaMeusProjetos/css/style.css
@@ -4,6 +4,7 @@
 @import url(./card-menu.css);
 @import url(./meus-projetos.css);
 @import url(./modal.css);
+@import url(./visualizar-projetos.css);
 
 :root {
     --color-principal-130:#303133;
