--- a/src/pages/TelaMeusProjetos/css/modal.css
+++ b/src/pages/TelaMeusProjetos/css/modal.css
@@ -3,9 +3,12 @@
   flex-direction: row;
   gap: 2.4rem;
 }
+.open-dialog-text {
+  cursor: pointer;
+}
 #modal-adc-img {
+  margin: auto;
   flex-direction: column;
-  margin-left: 16%;
   justify-content: center;
   padding: 2.4rem 3.2rem;
   width: 89rem;
@@ -175,7 +178,7 @@ form {
   font-style: normal;
   font-weight: 400;
   line-height: 1.4rem;
-  letter-spacing: 0.25px;
+  letter-spacing: 0.025rem;
 }
 textarea {
   padding: 2rem;
@@ -184,31 +187,73 @@ textarea {
   display: flex;
   width: 38.9rem;
   height: 12rem;
-  padding: var(--none, 0px) 12px;
+  padding: var(--none, 0px) 1.2rem;
   flex-direction: column;
   align-items: flex-start;
   gap: var(--none, 0px);
   flex-shrink: 0;
   align-self: stretch;
-  border-radius: var(--borderRadius, 4px);
-  border: var(--none, 1px) solid
+  border-radius: var(--borderRadius, 0.4rem);
+  border: var(--none, 0.1rem) solid
     var(--components-input-outlined-enabledBorder, rgba(0, 0, 0, 0.23));
 }
 
 @media (max-width: 800px) {
-  .meus-projetos input {
-      width: 100%;
+  .container {
+    display: flex;
+    flex-direction: column-reverse;
   }
-
-  .meus-projetos__cards {
-      gap: 2.7rem;
+  body {
+    display: flex;
+    height: 100vh;
+    align-items: center;
   }
-
-  .meus-projetos__card--ativado {
-      padding: 0 2.1rem;
+  html {
+    border-radius: var(--none, 0px);
+    background: #fff;
+    font-size: 50%;
   }
-  .modal-adc-img{
-      width: 26.6rem;
-      height: 80.3rem;
+  main {
+    order: -1;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+  }
+  #modal-adc-img {
+    padding: 2.5rem;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 85.9rem;
+    overflow: hidden;
+    border-radius: var(--none, 0px);
+    background: #fefefe;
+    flex-shrink: 0;
+    border: none;
+  }
+  .texto-adicionar {
+    padding: 0.2rem;
+    color: var(--Neutral-Colors-Neutral-110, #515255);
+    flex-shrink: 0;
+    align-self: stretch;
+    font-size: 2.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2.4rem;
+  }
+  .texto-selecione {
+    text-align: left;
+    position: relative;
+    color: var(--Neutral-Colors-Neutral-110, #515255);
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.6rem;
+    letter-spacing: 0.015rem;
+    top: 285px;
+  }
+  .texto-visualizar {
+    margin-top: 3rem;
   }
 }
