--- a/src/pages/TelaMeusProjetos/css/visualizar-projetos.css
+++ b/src/pages/TelaMeusProjetos/css/visualizar-projetos.css
@@ -1,13 +1,9 @@
-#modal-visualizar-projeto {
-    flex-direction: column;
-    margin-left: 16%;
-    justify-content: center;
-    padding: 2.4rem 3.2rem;
-    width: 89rem;
-    height: 52.2rem;
-    overflow: hidden;
-    border-radius: var(--none, 0px);
-    background: #fefefe;
-    flex-shrink: 0;
-    border: none;
-  }
+.visualizar-imagem {
+  width: 104.2rem;
+  height: 98.0815rem;
+  flex-shrink: 0;
+  background: #f00707;
+  flex-shrink: 0;
+  border: none;
+  margin: auto;
+}
