--- a/src/pages/TelaCadastro/css/TelaCadastro.css
+++ b/src/pages/TelaCadastro/css/TelaCadastro.css
@@ -24,6 +24,11 @@ body {
     lightgray 50% / cover no-repeat;
   flex-shrink: 0;
 }
+
+.mensagem-desaparecer {
+  display: none;
+}
+
 .btn-submit {
   display: flex;
   width: 51.7rem;
@@ -111,7 +116,7 @@ body {
   line-height: 1.6rem;
   letter-spacing: 0.15px;
 }
-#input-password {
+#password {
   justify-self: flex-end;
   display: flex;
   background-position: 95% center;
@@ -172,4 +177,8 @@ input:hover {
   font-weight: 400;
   line-height: 40px;
   margin-bottom: 32px;
+}
+
+#toast {
+  display: block;
 }
