--- a/src/pages/TelaMeusProjetos/css/style.css
+++ b/src/pages/TelaMeusProjetos/css/style.css
@@ -5,14 +5,17 @@
 @import url(./meus-projetos.css);
 @import url(./modal.css);
 @import url(./visualizar-projetos.css);
+@import url(./mensagem-sucesso.css);
 
 :root {
     --color-principal-130:#303133;
     --color-principal-100: #111133;
     --color-neutral-130:#0B0C0D;
+    --neutral-colors-neutral-110: #515255;
     --color-neutral-100:#818388;
     --color-neutral-70:#E6E9F2;
     --color-neutral-60:#FCFDFF;
+    --color-brand-secundria-secondary-100: #F52;
 }
 
 .esconder {
