--- a/src/pages/TelaMeusProjetos/css/style.css
+++ b/src/pages/TelaMeusProjetos/css/style.css
@@ -3,7 +3,7 @@
 @import url(./header.css);
 @import url(./card-menu.css);
 @import url(./meus-projetos.css);
-@import url(./modal.css);
+@import url(./modal-add-projeto.css);
 @import url(./visualizar-projetos.css);
 @import url(./mensagem-sucesso.css);
 
