--- a/src/pages/TelaDescobrir/css/menu.css
+++ b/src/pages/TelaDescobrir/css/menu.css
@@ -18,3 +18,43 @@
     height: 40px;
     border-radius: 50%;
 }
+
+/* configuração dos botoes do menu*/
+.butinfoMenu{
+    margin-bottom: 8px;
+    padding: 6px 16px;
+}
+
+/* configuração dos links que envolvem os botões do menu*/
+.infoMenu > a {
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+}
+
+/*div que possui os dois botes do menu, o de Meus projetos e o Descobrir */
+.infoMenu{
+    border-bottom: 1px solid rgb(228, 228, 228);
+}
+
+/* espaço que mostra as informações do usuário dentro do menu*/
+.informacoes{
+    padding: 6px 16px;
+    height: 68px;
+    border-bottom: 1px solid rgb(228, 228, 228);
+    margin-bottom: 10px;
+}
+
+/* configuração da div do botão de sair que fica no menu*/
+.sair{
+    padding: 6px 16px;
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
+    height: 50px;
+}
+
+/* configuração do icone do Botão de sair*/
+.sair > img{
+    width: 24px;
+}
