feat: adicionando scroll na tela responsiva modal

--- a/src/pages/TelaMeusProjetos/css/visualizar-projetos.css
+++ b/src/pages/TelaMeusProjetos/css/visualizar-projetos.css
@@ -16,6 +16,7 @@
   padding: 5.6rem 10.2rem 8.2rem 10.2rem;
   gap:3.2rem;
   overflow-x: hidden;
+  overflow-y: visible
 }
 
 .header-modal-visualizar {
