--- a/src/pages/TelaMeusProjetos/css/modal-add-projeto.css
+++ b/src/pages/TelaMeusProjetos/css/modal-add-projeto.css
@@ -234,7 +234,7 @@ textarea {
     justify-content: center;
     width: 100%;
     height: 85.9rem;
-    overflow: hidden;
+    overflow-y: visible;
     border-radius: var(--none, 0px);
     background: #fefefe;
     flex-shrink: 0;
