--- a/src/pages/TelaDescobrir/css/projetos.css
+++ b/src/pages/TelaDescobrir/css/projetos.css
@@ -1,6 +1,8 @@
-.container{
-    max-width: 1800px;
-    margin: auto;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 /* configuração da div que e pai das divs que vão exibir os projetos*/
@@ -10,7 +12,7 @@
     flex-wrap: wrap;
     row-gap: 15px;
     column-gap: 15px;
-    justify-content: space-between;
+    justify-content: start;
 }
 
 /* configuração da div que vai receber os projetos*/
