--- a/src/pages/TelaLogin/css/TelaLogin.css
+++ b/src/pages/TelaLogin/css/TelaLogin.css
@@ -39,7 +39,7 @@ main {
   width: 100%;
   height: 4.2rem;
   overflow: hidden;
-  padding: 8px 22px;
+  padding: 0.8rem 2.2rem;
   border: none;
   border-radius: var(--borderRadius, 4px);
   box-shadow:
@@ -64,27 +64,10 @@ main {
 
 .button-google-sign-in {
   display: flex;
-  padding: 11px var(--1, 8px);
-  border-radius: 2px;
-  box-shadow:
-    0px 1px 1px 0px rgba(0, 0, 0, 0.17),
-    0px 0px 1px 0px rgba(0, 0, 0, 0.08);
-  background: #fff;
-  align-items: center;
-  gap: var(--3, 24px);
+  border: none;
 }
-.button-google-sign-in:hover {
-  border-radius: 2px;
-  background: rgba(66, 133, 244, 0.1);
-}
-.btn-google-title {
-  color: rgba(0, 0, 0, 0.54);
-  font-family: Roboto;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
+
+
 /*Container login*/
 .container-login {
   display: flex;
