feat: finalizando card projetos de usuário

--- a/src/pages/TelaMeusProjetos/css/style.css
+++ b/src/pages/TelaMeusProjetos/css/style.css
@@ -16,6 +16,7 @@
     --color-neutral-70:#E6E9F2;
     --color-neutral-60:#FCFDFF;
     --color-brand-secundria-secondary-100: #F52;
+    --text-primary: rgba(0, 0, 0, 0.87);
 }
 
 .esconder {
