--- a/src/pages/TelaMeusProjetos/css/meus-projetos.css
+++ b/src/pages/TelaMeusProjetos/css/meus-projetos.css
@@ -32,7 +32,7 @@
 
 .meus-projetos__cards {
   display: flex;
-  justify-content: space-between;
+  gap: 1.6rem;
   flex-wrap: wrap;
 }
 
@@ -41,6 +41,73 @@
   width: 39rem;
   background-color: var(--color-neutral-70);
   opacity: 0.8;
+}
+
+.card-encontrar-projeto {
+  position: relative;
+}
+
+.icone-lapis {
+  position: absolute;
+  top: 1.6rem;
+  right: 1.6rem;
+  background-color: var(--color-brand-secundaria-secondary-70);
+  border-radius: 100%;
+  cursor: pointer;
+}
+
+.dropdown-editar-excluir ul {
+  position: absolute;
+  right: 1.6rem;
+  top: 5rem;
+  background: #fff;
+  padding: 2.4rem;
+  border-radius: .8rem;
+  width: 20rem;
+}
+
+.dropdown-editar-excluir ul li {
+  color: var(--neutral-colors-neutral-110);
+
+  padding: 1rem;
+
+  font-family: Roboto;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.6rem; 
+  letter-spacing: 0.15px;
+}
+
+.triangulo-balao {
+  position: absolute;
+  right: 3.5rem;
+  top: 4.3rem;
+  border-left: 9px solid transparent;
+  border-right: 9px solid transparent;
+  border-bottom: 9px solid white;
+}
+
+.tag-card-usuario {
+  border-radius: 100%;
+  background: var(--action-selected, rgba(0, 0, 0, 0.08));
+  padding: 1rem;
+
+  color: var(--text-primary);
+
+  font-family: Roboto;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.8rem;
+  letter-spacing: 0.16px;
+
+}
+
+
+.imagem-projeto-usuario {
+  height: 25.8rem;
+  width: 39rem;
 }
 
 .meus-projetos__card--ativado {
@@ -61,6 +128,18 @@
   font-weight: 400;
   line-height: 1.6rem; /* 100% */
   letter-spacing: 0.5px;
+}
+
+.meus-projetos__card-info-usuario {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container-card-info-usuario {
+  display: flex;
+  align-items: center;
+  gap: .8rem;
 }
 
 .meus-projetos__card--ativado p:nth-child(3) {
