--- a/src/pages/TelaMeusProjetos/css/style.css
+++ b/src/pages/TelaMeusProjetos/css/style.css
@@ -7,6 +7,7 @@
 @import url(./visualizar-projetos.css);
 @import url(./mensagem-sucesso.css);
 @import url(./icon-lapis.css);
+@import url(./modal-excluir-projeto.css);
 
 
 :root {
