--- a/src/pages/TelaCadastro/css/TelaCadastro.css
+++ b/src/pages/TelaCadastro/css/TelaCadastro.css
@@ -43,6 +43,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
+  text-transform: uppercase;
 }
 .btn-submit:hover {
   border-radius: var(--borderRadius, 4px);
@@ -56,10 +57,7 @@ body {
 /*Container login*/
 .container-form {
   display: flex;
-  max-width: 755px;
-  width: 60%;
-  height: 100%;
-  flex-shrink: 0;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
