fix: header tela projetos quebrado

--- a/src/pages/TelaMeusProjetos/css/mensagem-sucesso.css
+++ b/src/pages/TelaMeusProjetos/css/mensagem-sucesso.css
@@ -2,7 +2,7 @@
     margin: auto;
     border: none;
     width: 35rem;
-    height: 24.2rems;
+    height: 24.2rem;
     text-align: center;
     padding: 3.2rem 4.8rem;
 }
@@ -15,7 +15,6 @@
     color: var(--neutral-colors-neutral-110);
     text-align: center;
 
-    font-family: Roboto;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
@@ -46,7 +45,6 @@
 .dialog-add-projeto button a {
     color: var(--color-neutral-60);
  
-    font-family: Roboto;
     font-size: 1.5rem;
     font-style: normal;
     font-weight: 500;
