--- a/src/pages/TelaMeusProjetos/css/modal-excluir-projeto.css
+++ b/src/pages/TelaMeusProjetos/css/modal-excluir-projeto.css
@@ -10,7 +10,6 @@
 .modal-excluir-projeto p:first-child {
     color: var(--neutral-colors-neutral-110);
 
-    font-family: Roboto;
     font-size: 2.4rem;
     font-style: normal;
     font-weight: 400;
@@ -20,8 +19,7 @@
 .modal-excluir-projeto p:nth-child(2) {
     margin: 3.2rem 0;
     color: var(--neutral-colors-neutral-110);
-    /* [Orange P] Style Guide/Body 1 */
-    font-family: Roboto;
+
     font-size: 1.6rem;
     font-style: normal;
     font-weight: 400;
@@ -36,11 +34,10 @@
     background: var(--color-brand-secundria-secondary-100);
     color: #fff;
 
-    font-family: Roboto;
     font-size: 1.5rem;
     font-style: normal;
     font-weight: 500;
-    line-height: 2.6rem; /* 173.333% */
+    line-height: 2.6rem; 
     letter-spacing: 0.46px;
     text-transform: uppercase;
     border-radius: 4px;
@@ -53,7 +50,6 @@
 
     color: rgba(0, 0, 0, 0.38);
 
-    font-family: Roboto;
     font-size: 1.5rem;
     font-style: normal;
     font-weight: 500;
