--- a/src/pages/TelaMeusProjetos/css/visualizar-projetos.css
+++ b/src/pages/TelaMeusProjetos/css/visualizar-projetos.css
@@ -1,6 +1,3 @@
-* {
-  font-family: Roboto;
-}
 
 .icone-close {
   text-align: right;
@@ -47,12 +44,11 @@
 
 .text-modal-visualizar-projeto {
   color: var(--Neutral-Colors-Neutral-120, #303133);
-/* [Orange P] Style Guide/Body 1 */
-  font-family: Roboto;
+
   font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.6rem; /* 100% */
+  line-height: 1.6rem; 
   letter-spacing: 0.5px;
 
   margin-bottom: 6rem ;
@@ -65,7 +61,6 @@
 }
 
 .tag {
-  font-family: Roboto;
   font-size: 1.3rem;
   font-style: normal;
   font-weight: 400;
