--- a/descobrir/css/projetos.css
+++ b/descobrir/css/projetos.css
@@ -7,12 +7,8 @@
 
 /* configuração da div que e pai das divs que vão exibir os projetos*/
 .exibirprojetos{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    row-gap: 15px;
-    column-gap: 15px;
-    justify-content: start;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
 }
 
 /* configuração da div que vai receber os projetos */
