--- a/descobrir/css/projetos.css
+++ b/descobrir/css/projetos.css
@@ -9,19 +9,21 @@
 .exibirprojetos{
     display: grid;
     grid-template-columns: repeat(3,1fr);
+    row-gap: 40px;
+    column-gap: 24px;
 }
 
 /* configuração da div que vai receber os projetos */
 .projeto{
     width: 389px;
-    background-color: #ffffff;
+    height: 290px;
 }
 
 
 /* imagem dentro da div projeto*/
 .projeto > img{
-    width: 100%;
-
+    width: 389px;
+    height: 290px;
 }
 
 .rodapeProjeto{
@@ -40,4 +42,17 @@
 
 .rodapeProjeto > p{
     color: #515255;
+}
+
+@media (max-width: 1256px){
+    .exibirprojetos{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media (max-width: 832px){
+    .exibirprojetos{
+        grid-template-columns: repeat(1,1fr);
+        justify-content: center;
+    }
 }
