--- a/descobrir/css/main.css
+++ b/descobrir/css/main.css
@@ -45,10 +45,8 @@ main{
 /* configuração do input de buscar tag*/
 .buscatag > input{
     padding: 10px 5px;
-    outline: none;
     border: 1px solid rgb(192, 192, 192);
     border-radius: 5px;
-    max-width: 723px; 
     width: 50%;
     
 }
@@ -65,5 +63,7 @@ main{
 }
 
 @media (max-width: 832px){
-
+    .buscatag > input{
+        width: 100%;
+    }
 }
