--- a/descobrir/css/projetos.css
+++ b/descobrir/css/projetos.css
@@ -44,6 +44,12 @@
     color: #515255;
 }
 
+.nome-descobrir::after {
+    content: '\00B7'; 
+    margin-left: .5rem;
+    font-weight: bold;
+  }
+
 @media (max-width: 1256px){
     .exibirprojetos{
         grid-template-columns: repeat(2,1fr);
